Fix spacing on hidden paragraphs

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2735,7 +2735,8 @@ p, a, li {
         color: #fff; }
       .answers-outer .answers .answer p, .answers-outer .answers .answer ol {
         overflow-y: hidden;
-        height: 0; }
+        height: 0;
+        margin: 0; }
       .answers-outer .answers .answer .answer-arrow {
         display: inline-block;
         transform: rotate(45deg) translateY(-6px);
