--- a/assets/scss/_public.scss
+++ b/assets/scss/_public.scss
@@ -200,6 +200,7 @@
             p, ol {
                 overflow-y: hidden;
                 height: 0;
+                margin: 0;
             }
             .answer-arrow {
                 display: inline-block;
